# internal/models/share.go
@@ -2,7 +2,7 @@ package models
 
 import "github.com/shopspring/decimal"
 
-type Item struct {
+type Share struct {
 	BaseModel
 	Amount          decimal.Decimal `gorm:"not null" json:"amount" sql:"type:decimal(20,3);"`
 	ChargedToUser   User            `json:"-"`
@@ -11,7 +11,7 @@ type Item struct {
 	Name            string          `json:"name" gorm:"not null"`
 	Receipt         Receipt         `json:"-"`
 	ReceiptId       uint            `json:"receiptId"`
-	Status          ItemStatus      `gorm:"default:'OPEN'; not null" json:"status"`
+	Status          ShareStatus     `gorm:"default:'OPEN'; not null" json:"status"`
 	Categories      []Category      `gorm:"many2many:item_categories" json:"categories"`
 	Tags            []Tag           `gorm:"many2many:item_tags" json:"tags"`
 }
